{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "02b03650-aa82-4911-88d6-ad62ce5c8477",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "6b22fa5c-7542-4175-a782-35fa2b435404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "ca92b168-7c11-46ad-8bc7-49f7904a94b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4405cda3-744c-4e21-8ba0-e741e4178d6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyboardEsc",
                    "type": "Button",
                    "id": "5df5c78e-13cc-4c48-861f-1015705f6dbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b69c5df4-9972-4105-b9cd-0d64219bb2f8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22255a96-527d-4f88-af83-cf4635c38bcb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4a6eac9-aba7-4f5d-bb83-22734fa59e39",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3225e61-34dc-4db3-b982-2d45b3b04d59",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardEsc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}